# tracker

./: .gitignore  README.md  about.md  pyproject.toml
frontend/: example_artist.html  index.html  login.html
frontend/script/: auth.js  index.js
frontend/style/: base_style.css  login.css
tracker/: config.py  db.db  exceptions.py  logger.py  main.py  utils.py
tracker/controllers/: artist.py
tracker/controllers/services/: genius.py  spotify.py  utils.py
tracker/models/: __init__.py  database.py  db_models.py
tracker/schemas/: schemas.py  service_schemas.py
