[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["dop3file <49581209+dop3file@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.3"
bcrypt = "^4.0.1"
pydantic = "^1.10.4"
httpx = "^0.23.3"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
