[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["dop3file <49581209+dop3file@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.3"
bcrypt = "^4.0.1"
pydantic = {extras = ["email"], version = "^1.10.5"}
httpx = "^0.23.3"
asyncpg = "^0.27.0"
aiohttp = "^3.8.4"
orjson = "^3.8.6"
loguru = "^0.6.0"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
